Fixed article image alignment

--- a/src/styles/layout/_article.scss
+++ b/src/styles/layout/_article.scss
@@ -173,6 +173,7 @@
       max-width: 100%;
       height: auto;
       display: block;
+      margin: auto;
     }
 
     @include media-breakpoint-down(sm) {
